Upgrade to Java 11 LTS
Java 9 has modules but is not LTS.